# odontoart-desk-remote

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/agent/: .env.example  index.html  package.json  tailwind.config.cjs
apps/agent/src/: App.tsx  styles.css
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/icons/: icon.icns
apps/agent/src-tauri/src/: audit.rs  capture.rs  commands.rs  main.rs  state.rs
apps/agent/src/components/: Modal.tsx
apps/agent/src/lib/: api.ts  signaling.ts  tauri.ts  webrtc.ts
apps/controller/: index.html  package.json  tailwind.config.cjs
apps/controller/src/: App.tsx  styles.css
apps/controller/src-tauri/: Cargo.toml  tauri.conf.json
apps/controller/src-tauri/icons/: icon.icns
apps/controller/src/lib/: api.ts  signaling.ts
infra/: docker-compose.yml  turnserver.conf
scripts/: build-installers.ps1  build-installers.sh  dev.ps1  dev.sh
server/: .env.example  .env.render  Dockerfile  package.json
server/scripts/: keepalive.mjs
server/scripts/windows/: install-service.ps1  uninstall-service.ps1
server/src/: auth.ts  config.ts  index.ts  sessions.ts  types.ts  ws.ts
