[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5", features = [] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
