[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
